<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txtViewOver"
        android:id="@+id/txtViewOver"
        android:layout_gravity="center_horizontal"
        android:textColor="#000000"
        android:textSize="52sp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txtViewWordPrompt"
        android:id="@+id/txtViewPrompt"
        android:textColor="@color/colorRed1"
        android:layout_marginLeft="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=" "
        android:id="@+id/txtViewPrompt2"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="6dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txtViewCorrect"
        android:id="@+id/txtViewCorrect"
        android:textColor="@color/colorRed1"
        android:layout_marginLeft="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=" "
        android:id="@+id/txtViewCorrect2"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="6dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txtViewYourResponse"
        android:id="@+id/txtViewYourResponse"
        android:layout_gravity="left"
        android:textColor="@color/colorRed1"
        android:layout_marginLeft="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=" "
        android:id="@+id/txtViewYourResponse2"
        android:layout_marginBottom="6dp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txtViewStreak"
        android:id="@+id/txtViewStreak"
        android:textColor="@color/colorRed1"
        android:layout_marginLeft="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=" "
        android:id="@+id/txtViewStreak2"
        android:layout_marginBottom="6dp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txtViewHighStreak"
        android:id="@+id/txtViewHighStreak"
        android:textColor="@color/colorRed1"
        android:layout_marginLeft="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=" "
        android:id="@+id/txtViewHighStreak2"
        android:layout_marginBottom="6dp"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>