<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/colorPrimary"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:src="@drawable/hiscore" />

        <TextView
            android:id="@+id/textViewStreakExplanation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:text="@string/txtViewStreakExplanation"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textViewFillNBlank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtViewFillBlank"
            android:textColor="@color/colorRed1"
            android:textSize="24sp"
            android:layout_marginTop="32dp"/>

        <TextView
            android:id="@+id/textViewHiscoreFNB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtViewHighStreak"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/textViewHiscoreFNB2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" "
            android:textColor="#000000"
            android:textSize="28sp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/textViewUltimateHiscoreFNB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtViewUltimateStreak"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/textViewUltimateHiscoreFNB2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" "
            android:textColor="#000000"
            android:textSize="28sp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/textViewMC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtViewMC"
            android:textColor="@color/colorRed1"
            android:textSize="24sp"
            android:layout_marginTop="32dp"/>

        <TextView
            android:id="@+id/textViewHiscoreMC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtViewHighStreak"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/textViewHiscoreMC2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" "
            android:textColor="#000000"
            android:textSize="28sp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/textViewUltimateHiscoreMC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtViewUltimateStreak"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/textViewUltimateHiscoreMC2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" "
            android:textColor="#000000"
            android:textSize="28sp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"/>

    </LinearLayout>
</ScrollView>
