<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:weightSum="10">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Spanish Infinitive"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:id="@+id/txtViewSpInfin"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:textColor="@color/colorRed1" />
        <ImageView
            android:id="@+id/rectimage"
            android:src="@drawable/rectangle"
            android:layout_height="fill_parent"
            android:layout_width="fill_parent"
            android:layout_below="@+id/txtViewSpInfin"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtViewEngPhrase"
            android:id="@+id/txtViewEngPhrase"
            android:layout_alignTop="@+id/rectimage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"
            android:textSize="24sp"
            android:textColor="#000000" />
        <TextView
            android:id="@+id/txtViewSpSubject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtViewSpSubj"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_below="@+id/txtViewEngPhrase"
            android:layout_alignLeft="@+id/rectimage"
            android:layout_alignStart="@+id/rectimage"
            android:layout_marginLeft="6dp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonGo"
            android:id="@+id/buttonGo"
            android:onClick="onGo"
            android:background="@color/colorGreen1"
            android:textColor="#000000"
            android:textSize="20sp"
            android:clickable="true"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/rectimage"
            android:layout_alignEnd="@+id/rectimage"
            android:layout_marginBottom="6dp"
            android:layout_marginRight="6dp" />
       <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtViewSpSubject"
            android:id="@+id/radioGroup"
            android:layout_alignLeft="@+id/rectimage"
            android:layout_alignStart="@+id/rectimage">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New RadioButton"
                android:id="@+id/radiobttn"
                android:layout_marginTop="2dp"
                android:textSize="20sp" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New RadioButton"
                android:id="@+id/radiobttn2"
                android:layout_marginTop="6dp"
                android:textSize="20sp" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New RadioButton"
                android:id="@+id/radiobttn3"
                android:layout_marginTop="6dp"
                android:textSize="20sp" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New RadioButton"
                android:id="@+id/radiobttn4"
                android:layout_marginTop="6dp"
                android:textSize="20sp" />
        </RadioGroup>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:layout_below="@+id/rectimage">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtViewStreak"
            android:id="@+id/txtViewStreak"
            android:textSize="20sp"
            android:textColor="@color/colorRed1"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="16dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtViewStreakNum"
            android:id="@+id/txtViewStreakNum"
            android:textSize="30sp"
            android:textColor="#000000"
            android:paddingBottom="2dp"
            android:layout_alignBottom="@+id/txtViewStreak"
            android:layout_centerHorizontal="true" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtViewTime"
            android:id="@+id/txtViewTime"
            android:textSize="20sp"
            android:textColor="@color/colorRed1"
            android:paddingTop="6dp"
            android:layout_below="@+id/txtViewStreak"
            android:layout_alignLeft="@+id/txtViewStreak"
            android:layout_alignStart="@+id/txtViewStreak"/>
        <Chronometer
            android:id="@+id/chronometer1"
            android:textColor="#000000"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Chronometer"
            android:layout_below="@+id/txtViewStreakNum"
            android:layout_alignLeft="@+id/txtViewStreakNum"
            android:layout_alignStart="@+id/txtViewStreakNum" />
        <ExpandableListView
            android:id="@+id/lvExp"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_below="@+id/txtViewTime"/>
    </RelativeLayout>

</LinearLayout>