<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:weightSum="8">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/selectMode"
        android:src="@drawable/selectmode"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:layout_margin="6dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="3"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=">"
            android:id="@+id/txtViewArrow"
            android:layout_gravity="center_vertical"
            android:textColor="@color/colorRed1"
            android:textSize="30sp"
            android:layout_marginLeft="16dp" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:text="@string/txtViewFillBlank"
            android:id="@+id/buttonMode1"
            android:onClick="onMode1"
            android:background="@color/colorOffWhite"
            android:layout_marginRight="16dp"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="3"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=">"
            android:id="@+id/txtViewArrow2"
            android:layout_gravity="center_vertical"
            android:textColor="@color/colorRed1"
            android:textSize="30sp"
            android:layout_marginLeft="16dp" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:text="@string/txtViewMC"
            android:id="@+id/buttonMode2"
            android:background="@color/colorOffWhite"
            android:layout_marginRight="16dp"
            android:textSize="20sp"
            android:onClick="onMode2" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtViewNote"
        android:id="@+id/txtViewNote"
        android:layout_gravity="center_horizontal"
        android:textSize="16sp"
        android:layout_weight="1"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColor="#000000" />
</LinearLayout>